--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,7 @@
 Package: fretboardr
 Title: An Amazing Shiny App
 Version: 0.0.0.9000
+Roxygen: list(markdown = TRUE)
 Authors@R: 
     person(given = "firstname",
            family = "lastname",
@@ -9,12 +10,10 @@ Authors@R:
 Description: What the package does (one paragraph).
 License: What license is it under?
 Imports: 
-    config (>= 0.3.1),
+    cli,
     dplyr,
     ggplot2,
-    golem (>= 0.3.2),
-    magrittr,
     shiny (>= 1.6.0)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.1.9000
