zero-point diagrams now supported

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,14 @@
 export(barr)
 export(barre)
 export(diagram)
-export(finger)
-export(fngr)
+export(index)
+export(indx)
+export(mddl)
+export(middle)
 export(mute)
+export(pinky)
+export(pnky)
+export(ring)
 export(thmb)
 export(thumb)
 import(ggplot2)
