--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ License: What license is it under?
 Imports: 
     cli,
     dplyr,
-    ggplot2,
+    ggplot2
+Suggests:
     shiny (>= 1.6.0)
 Encoding: UTF-8
 LazyData: true
